# apps/auth-service/src/routes/auth.router.ts
@@ -1,8 +1,11 @@
 import express, { Router } from "express";
 import {
   loginUser,
+  userForgotPassword,
   userRegistration,
+  userResetPassword,
   verifyUser,
+  verifyUserForgotPassword,
 } from "../controller/auth.controller";
 
 const router: Router = express.Router();
@@ -10,5 +13,8 @@ const router: Router = express.Router();
 router.post("/user-registration", userRegistration);
 router.post("/verify-user", verifyUser);
 router.post("/login-user", loginUser);
+router.post("/forgot-password-user", userForgotPassword);
+router.post("/verify-forgot-password-user", verifyUserForgotPassword);
+router.post("/reset-password-user", userResetPassword);
 
 export default router;
